reload logic is now split into modules