@@ -8,6 +8,7 @@ import org.bukkit.command.TabExecutor;
 import org.bukkit.entity.Player;
 import org.jetbrains.annotations.NotNull;
 
+import java.util.Collections;
 import java.util.List;
 import java.util.Map;
 import java.util.stream.Stream;
@@ -26,26 +27,54 @@ public final class CoreCommand implements TabExecutor {
                              @NotNull String label,
                              String @NotNull [] args) {
 
-        if (sender instanceof Player player) {
-            if (!player.hasPermission("aircore.command.admin")) {
-                MessageUtil.send(player, "errors.no-permission",
-                        Map.of("permission", "aircore.command.admin"));
-                return true;
-            }
+        if (sender instanceof Player player && !player.hasPermission("aircore.command.admin")) {
+            MessageUtil.send(player, "errors.no-permission", Map.of("permission", "aircore.command.admin"));
+            return true;
         }
 
         if (args.length == 0) {
-            if (sender instanceof Player p) {
-                MessageUtil.send(p, "general.plugin-usage", Map.of());
-            } else {
-                sender.sendMessage("Usage: /aircore <reload|version>");
-            }
+            sendUsage(sender);
             return true;
         }
 
         String sub = args[0].toLowerCase();
         switch (sub) {
-            case "reload" -> {
+            case "reload" -> handleReload(sender, args);
+            case "version" -> {
+                String version = plugin.getDescription().getVersion();
+                if (sender instanceof Player p) {
+                    MessageUtil.send(p, "general.plugin-version", Map.of("version", version));
+                } else {
+                    sender.sendMessage("Plugin version is " + version);
+                }
+            }
+            default -> sendUsage(sender);
+        }
+        return true;
+    }
+
+    private void handleReload(CommandSender sender, String[] args) {
+        String type = args.length > 1 ? args[1].toLowerCase() : "all";
+
+        switch (type) {
+            case "placeholders" -> {
+                plugin.placeholders().reload();
+                notifyReload(sender, "placeholders");
+            }
+            case "config" -> {
+                plugin.config().reload();
+                plugin.core().reload();
+                notifyReload(sender, "config");
+            }
+            case "guis" -> {
+                plugin.gui().reload();
+                notifyReload(sender, "guis");
+            }
+            case "messages" -> {
+                plugin.lang().reload();
+                notifyReload(sender, "messages");
+            }
+            case "all" -> {
                 plugin.config().reload();
                 plugin.lang().reload();
                 plugin.core().reload();
@@ -57,30 +86,28 @@ public final class CoreCommand implements TabExecutor {
                 plugin.teleport().reload();
                 plugin.utility().reload();
                 plugin.placeholders().reload();
-
-                if (sender instanceof Player p) {
-                    MessageUtil.send(p, "general.plugin-reloaded", Map.of());
-                } else {
-                    sender.sendMessage("Plugin reloaded successfully");
-                }
+                notifyReload(sender, "all");
             }
-            case "version" -> {
-                String version = plugin.getDescription().getVersion();
-                if (sender instanceof Player p) {
-                    MessageUtil.send(p, "general.plugin-version", Map.of("version", version));
-                } else {
-                    sender.sendMessage("Plugin version is " + version);
-                }
-            }
-            default -> {
-                if (sender instanceof Player p) {
-                    MessageUtil.send(p, "general.plugin-usage", Map.of());
-                } else {
-                    sender.sendMessage("Usage: /aircore <reload|version>");
-                }
-            }
+            default -> sender.sendMessage("Unknown reload type. Use: placeholders, config, guis, messages, or all.");
         }
-        return true;
+    }
+
+    private void notifyReload(CommandSender sender, String moduleKey) {
+        if (sender instanceof Player p) {
+            String translatedModule = plugin.lang().get("general.modules." + moduleKey);
+
+            MessageUtil.send(p, "general.plugin-reloaded", Map.of("module", translatedModule));
+        } else {
+            sender.sendMessage(moduleKey + " reloaded successfully.");
+        }
+    }
+
+    private void sendUsage(CommandSender sender) {
+        if (sender instanceof Player p) {
+            MessageUtil.send(p, "general.plugin-usage", Map.of());
+        } else {
+            sender.sendMessage("Usage: /aircore <reload [type]|version>");
+        }
     }
 
     @Override
@@ -88,11 +115,23 @@ public final class CoreCommand implements TabExecutor {
                                       @NotNull Command cmd,
                                       @NotNull String label,
                                       String @NotNull [] args) {
+
+        if (sender instanceof Player player && !player.hasPermission("aircore.command.admin")) {
+            return Collections.emptyList();
+        }
+
         if (args.length == 1) {
             return Stream.of("reload", "version")
                     .filter(s -> s.startsWith(args[0].toLowerCase()))
                     .toList();
         }
-        return List.of();
+
+        if (args.length == 2 && args[0].equalsIgnoreCase("reload")) {
+            return Stream.of("all", "placeholders", "config", "guis", "messages")
+                    .filter(s -> s.startsWith(args[1].toLowerCase()))
+                    .toList();
+        }
+
+        return Collections.emptyList();
     }
 }
